# glicol-cli

./: .gitignore  1.glicol  Cargo.toml  Justfile  LICENSE  README.md  SolsticeStream2023.glicol  sample.glicol  test.glicol  test2.glicol
src/: findwav.rs  main.rs  rb.rs  recent_lines.rs  samples.rs  tui.rs  watcher.rs
