[package]
name = "glicol-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.8", features = ["derive"] }
glicol = { version = "0.13.1", features = ["use-samples"] }
glicol_synth = "0.13.1"
cpal =  "0.15.0"
# chrono = "0.4.23"
crossterm = "*"
tui = "*"
symphonia = { version = "0.5.2", features = ["wav"] }
rayon = "1.7.0"
walkdir = "2.3.3"
# dasp_ring_buffer = "0.11.0"

[features]
default = []

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
