[package]
name = "glicol-cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
glicol = { version = "0.13.5", features = ["use-samples", "use-meta"] }
glicol_synth = { version = "0.13.5", default-features = false }
cpal = "0.15.2"
chrono = "0.4.23"
crossterm = { version = "0.27.0", default-features = false }
ratatui = "0.26.2"
symphonia = "0.5.3"
notify = "6"
rayon = "1.8.0"
ringbuf = "0.3"
walkdir = "2.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
dirs = "5.0.1"
# dasp_ring_buffer = "0.11.0"

[dev-dependencies]
tempfile = "3"

[features]
default = []

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
